@@ -46,7 +46,7 @@ to call at top-level: ant deploy-contrib compile-core-test
   <target name="jar" depends="compile">
     <copy file="${src.dir}/org/apache/hadoop/hive/ant/antlib.xml"
           todir="${build.dir}/classes/org/apache/hadoop/hive/ant"/>
-    <jar destfile="${build.dir}/hive_anttasks.jar">
+    <jar destfile="${build.dir}/hive-anttasks-${version}.jar">
       <fileset dir="${build.dir}/classes"/>
     </jar>
   </target>
